<resources>
    <string name="app_name">S2 Slashdot</string>
    <string name="action_settings">Settings</string>
    <string name="action_loadsl">Refresh</string>

    <string name="action_exit">Exit</string>
    <string name="title_activity_read_story">S2 Slashdot</string>
    <string name="title_activity_setting">Settings</string>
    <string name="welcome_instruct">Welcome to S2 Slashdot.\nThe Slashdot Reader inspired by Simply Slashdot.
        \nTo use, click Refresh in the application menu.\nFor settings, use the settings menu.</string>
    <string name="loading_str">Loading...</string>
    <string name="pref_title_add_friends_to_messages">s</string>
    <string name="pref_header_data_sync">s</string>
    <string name="read_story_share">Share</string>
    <string name="SettingsMenuHeader">Settings</string>
    <string name="SettingsMenuTheme">Theme:</string>
    <string name="SettingsMenuThreshHold">Threshold:</string>
    <string name="SettingsMenuSwipe">Swipe Gesture:</string>
    <string name="SettingsMenuSwipeDistance">Swipe Distance:</string>
    <string name="SettingsMenuStoryCount">Story Count:</string>
    <string name="SettingsWarningCount">Danger, Will Robinson! The higher the story count and the lower the comment threshold, the bigger the download. Story count of 100 with threshold of 0 is on average 2.9 Megabytes GZipped</string>
    <string name="SettingsRefresh">Refresh On Load:</string>
    <string name="read_story_refilter">Comment Filter</string>
    <string name="SettingsMenuFontSize">Font Size:</string>
    <string name="title_activity_send_feed_back" translatable="false">Send Feedback</string>
    <string name="hello_world" translatable="false">Hello world!</string>

    <string name="feedbacktitle" translatable="false">Send Feedback</string>
    <string name="feedbackname" translatable="false">Your Name</string>
    <string name="feedbackemail" translatable="false">Your Email</string>
    <string name="feedbacktype" translatable="false">Feedback Type</string>
    <string name="feedbackbody">Comment</string>
    <string name="feedbackbutton">Send Feedback</string>

    <string name="feedbacktype1" translatable="false">Praise</string>
    <string name="feedbacktype2" translatable="false">Gripe</string>
    <string name="feedbacktype3" translatable="false">Suggestion</string>
    <string name="feedbacktype4" translatable="false">Bug</string>

</resources>
