<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:background="?attr/textBackColour"
    android:textColor="?attr/textForeColour"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:background="?attr/textBackColour"
        android:textColor="?attr/textForeColour"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedbacktitle"
            android:background="?attr/textBackColour"
            android:textColor="?attr/textForeColour"
            android:textSize="10pt">
        </TextView>
        <EditText
            android:id="@+id/EditTextName"
            android:layout_height="fill_parent"
            android:hint="@string/feedbackname"
            android:inputType="textPersonName"
            android:background="?attr/textBackColour"
            android:textColor="?attr/textForeColour"
            android:layout_width="fill_parent"
            android:padding="5dp">
        </EditText>
        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_height="fill_parent"
            android:hint="@string/feedbackemail"
            android:inputType="textEmailAddress"
            android:background="?attr/textBackColour"
            android:textColor="?attr/textForeColour"
            android:layout_width="fill_parent"
            android:padding="5dp">
        </EditText>

        <EditText
            android:id="@+id/EditTextFeedbackBody"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackbody"
            android:inputType="textMultiLine"
            android:lines="10"
            android:background="?attr/textBackColour"
            android:textColor="?attr/textForeColour"
            android:layout_width="fill_parent"
            android:padding="5dp"
            android:gravity="left|top">
        </EditText>
        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_height="wrap_content"
            android:text="@string/feedbackbutton"
            android:background="#C0C0C0"
            android:textColor="?attr/textForeColour"
            android:onClick="sendFeedback"
            android:layout_width="fill_parent">
        </Button>

    </LinearLayout>
</ScrollView>